--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">RSSNews</string>
+    <string name="splash_app_des1">최신 뉴스를 제공합니다.</string>
+    <string name="splash_app_version">v 0.1</string>
+    <string name="item_title_example">title</string>
+    <string name="item_content_example">content\ncontent</string>
+    <string name="item_tag_example">tag</string>
+    <string name="splash_app_des2">뉴스의 키워드를 알아보세요.</string>
+    <string name="splash_app_des3">뉴스를 클릭하면 원본뉴스를 볼수 있습니다.</string>
 </resources>
